<resources>
    <string name="app_name">Drunkle</string>

    <string name="title_activity_deal_game_1" translatable="false">deal_game_1</string>

    <string name="dummy_button" translatable="false">Dummy Button</string>
    <string name="dummy_content" translatable="false">DUMMY\nCONTENT</string>
    <string name="title_activity_main2" translatable="false">Drunkle</string>
    <string name="navigation_drawer_open" translatable="false">Open navigation drawer</string>
    <string name="navigation_drawer_close" translatable="false">Close navigation drawer</string>
    <string name="nav_header_title" translatable="false">Drunkle</string>
    <string name="nav_header_subtitle" translatable="false">by Mirko Cordes</string>
    <string name="nav_header_desc" translatable="false">Navigation</string>
    <string name="menu_home" translatable="false">HOME</string>

    <string name="menu_dealGame">DRAW CARDS</string>
    <string name="menu_bottleSpin">SPIN THE BOTTLE</string>
    <string name="menu_busdriver">DRIVE BUS</string>
    <string name="menu_ban_words">BAN WORDS</string>
    <string name="start_Title">Welcome</string>

    <string name="start_Subtitle">to Drunkle</string>
    <string name="start_Textone">This is the next party app!</string>
    <string name="start_Texttwo">Now you can choose between four minigames.</string>
    <string name="start_game">start the game</string>
    <string name="cardsdraw_howto">1. Click on the green fields to choose the number of players and the game mode.\n\n2. Click on the green button to start the game.\n\n3. After starting the game, click on the button CHOOSE RANDOM.\n\n4. If you got the green card, you have to pass the smartphone to the next one.\n\n5. If you got the red card, you first have to drink 1 shot... .</string>

    <string name="cardsdraw_choose">Choose random</string>
    <string name="bottle_howto">1. Add some tasks to the task list.\n\n2. Click on the start button, to start the game.\n\n3. After starting the game, click on the button SPIN NOW.\n\n4. After that, a teammate get a task...</string>

    <string name="bottle_listTitle">Your game tasks</string>
    <string name="bottle_taskTitle">Task</string>
    <string name="bottle_spin">Spin now</string>
    <string name="bus_howto">1. Read the questions above.\n\n2. Click on the button you think, it is the right button.\n\n3. When you failed, you have to drink one shot and play again.\n\n4. By clicking on the right button, you go to the next round...</string>

    <string-array name="numbers">
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>
        <item>10</item>
        <item>11</item>
        <item>12</item>
        <item>13</item>
        <item>14</item>
        <item>15</item>
        <item>16</item>
        <item>17</item>
        <item>18</item>
        <item>19</item>
        <item>20</item>
        <item>21</item>
        <item>22</item>
        <item>23</item>
        <item>24</item>
        <item>25</item>
        <item>26</item>
        <item>27</item>
        <item>28</item>
        <item>29</item>
        <item>30</item>
        <item>31</item>
        <item>32</item>
        <item>33</item>
        <item>34</item>
        <item>35</item>
        <item>36</item>
        <item>37</item>
        <item>38</item>
        <item>39</item>
        <item>40</item>
        <item>more...</item>
    </string-array>

</resources>
