<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Start_Fragment">

    <View
        android:id="@+id/view4"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="@id/divider"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/start_Title"
        android:textColor="#000000"
        android:textSize="36sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@id/view4"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="@id/view4"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:text="@string/start_Subtitle"
        android:textColor="#000000"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="@id/view4"
        app:layout_constraintStart_toStartOf="@id/view4"
        app:layout_constraintTop_toBottomOf="@+id/textView6" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/start_Textone"
        android:textColor="#000000"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView7" />

    <TextView
        android:id="@+id/textView9"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:text="@string/start_Texttwo"
        android:textColor="#000000"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView8" />

    <View
        android:id="@+id/divider"
        android:layout_width="395dp"
        android:layout_height="1dp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="13dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:background="?android:attr/listDivider"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView9" />

    <ScrollView
        android:id="@+id/scrollView2"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:scrollbarStyle="insideOverlay"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/divider"
        app:layout_constraintVertical_bias="0.0">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TableLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:showDividers="middle">

                <TableRow
                    android:id="@+id/BusDrive"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <Button
                        android:id="@+id/DriveButton"
                        android:layout_width="125dp"
                        android:layout_height="125dp"
                        android:layout_marginTop="16dp"
                        android:background="@drawable/button_home"
                        android:foreground="@drawable/ic_menu_bus_drive" />

                    <TextView
                        android:id="@+id/textView16"
                        android:layout_width="179dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="8dp"
                        android:layout_marginLeft="8dp"
                        android:layout_marginTop="0dp"
                        android:layout_marginEnd="107dp"
                        android:layout_marginRight="107dp"
                        android:layout_marginBottom="0dp"
                        android:text="@string/menu_busdriver"
                        android:textAllCaps="true"
                        android:textColor="#42A5F5"
                        android:textSize="24sp"
                        android:textStyle="bold" />
                </TableRow>

                <TableRow
                    android:id="@+id/SpinBottle"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <Button
                        android:id="@+id/Button3"
                        android:layout_width="125dp"
                        android:layout_height="125dp"
                        android:layout_marginTop="16dp"
                        android:background="@drawable/button_home"
                        android:foreground="@drawable/ic_menu_bottle_spin1" />

                    <TextView
                        android:id="@+id/textView12"
                        android:layout_width="257dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="8dp"
                        android:layout_marginLeft="8dp"
                        android:layout_marginTop="0dp"
                        android:layout_marginEnd="107dp"
                        android:layout_marginRight="107dp"
                        android:layout_marginBottom="0dp"
                        android:text="@string/menu_bottleSpin"
                        android:textAllCaps="true"
                        android:textColor="#42A5F5"
                        android:textSize="24sp"
                        android:textStyle="bold" />

                </TableRow>

                <TableRow
                    android:id="@+id/CardDraw"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <Button
                        android:id="@+id/Button2"
                        android:layout_width="125dp"
                        android:layout_height="125dp"
                        android:layout_marginTop="16dp"
                        android:background="@drawable/button_home"
                        android:foreground="@drawable/ic_menu_cards_draw1" />

                    <TextView
                        android:id="@+id/textView14"
                        android:layout_width="179dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="8dp"
                        android:layout_marginLeft="8dp"
                        android:layout_marginTop="0dp"
                        android:layout_marginEnd="107dp"
                        android:layout_marginRight="107dp"
                        android:layout_marginBottom="0dp"
                        android:text="@string/menu_dealGame"
                        android:textAllCaps="true"
                        android:textColor="#42A5F5"
                        android:textSize="24sp"
                        android:textStyle="bold" />

                </TableRow>

                <TableRow
                    android:id="@+id/Speech"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:clickable="false"
                    android:clipChildren="false"
                    android:visibility="visible">

                    <Button
                        android:id="@+id/SpeechBtn"
                        android:layout_width="125dp"
                        android:layout_height="125dp"
                        android:layout_marginTop="16dp"
                        android:background="@drawable/button_home"
                        android:clickable="false"
                        android:foreground="@drawable/menu_ic_mic"
                        android:linksClickable="false" />

                    <TextView
                        android:id="@+id/textView10"
                        android:layout_width="179dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="8dp"
                        android:layout_marginLeft="8dp"
                        android:layout_marginTop="0dp"
                        android:layout_marginEnd="107dp"
                        android:layout_marginRight="107dp"
                        android:layout_marginBottom="0dp"
                        android:clickable="false"
                        android:linksClickable="false"
                        android:text="@string/menu_ban_words"
                        android:textAllCaps="true"
                        android:textColor="#42A5F5"
                        android:textSize="24sp"
                        android:textStyle="bold" />
                </TableRow>
            </TableLayout>

        </LinearLayout>

    </ScrollView>

</android.support.constraint.ConstraintLayout>