<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Ban_Words_1">

    <TextView
        android:id="@+id/Howto1"
        android:layout_width="0dp"
        android:layout_height="40dp"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="48dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:background="#9F8DFF80"
        android:gravity="center"
        android:lineSpacingExtra="14sp"
        android:shadowColor="#00000000"
        android:text="How to play!"
        android:textAllCaps="false"
        android:textColor="#FFFFFF"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBaseline_creator="@android:integer/config_mediumAnimTime"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2"
        tools:visibility="visible" />

    <TextView
        android:id="@+id/Howto2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:autoText="false"
        android:background="#EBFBEE"
        android:text="@string/bus_howto"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        android:textColor="#63020202"
        android:typeface="normal"
        app:layout_constraintEnd_toEndOf="@+id/Howto1"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/Howto1"
        app:layout_constraintTop_toBottomOf="@+id/Howto1"
        tools:visibility="visible" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="81dp"
        android:layout_marginLeft="81dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="80dp"
        android:layout_marginRight="80dp"
        android:text="@string/menu_ban_words"
        android:textAllCaps="true"
        android:textColor="#42A5F5"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/InfoOkay"
        android:layout_width="0dp"
        android:layout_height="45dp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="48dp"
        android:background="@drawable/button_bg_rounded_corners"
        android:text="@string/start_game"
        android:textColor="#FFFFFF"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/Howto2"
        app:layout_constraintStart_toStartOf="@+id/Howto2"
        app:layout_constraintTop_toBottomOf="@+id/Howto2"
        tools:visibility="visible" />

</android.support.constraint.ConstraintLayout>